CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(berkelium-cpp)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "out")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "run")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "run")

INCLUDE_DIRECTORIES(../include)

FILE(GLOB SRC_LIB "../src/impl/*.cpp")
FILE(GLOB SRC_DEMO1 "../src/demo/demo1/*.cpp")

ADD_DEFINITIONS(-std=c++0x)

ADD_LIBRARY(berkelium-cpp STATIC ${SRC_LIB})

ADD_EXECUTABLE(demo1 ${SRC_DEMO1})
TARGET_LINK_LIBRARIES(demo1 berkelium-cpp)
