CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(berkelium-cpp)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "out")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "run")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "run")

INCLUDE_DIRECTORIES(../include)

FILE(GLOB_RECURSE SRC_INCLUDE "../include/*.hpp")
FILE(GLOB_RECURSE SRC_LIB "../src/impl/*.cpp")
FILE(GLOB_RECURSE SRC_DEMO1 "../src/demo/demo1/*.cpp")

SOURCE_GROUP("Header Files" FILES ${SRC_INCLUDE})

IF(CMAKE_COMPILER_IS_GNUCXX)
	SET(ENABLE_CXX11 "-std=c++11")
	EXECUTE_PROCESS(COMMAND "${CMAKE_CXX_COMPILER} -dumpversion" OUTPUT_VARIABLE GCC_VERSION)
	IF(GCC_VERSION VERSION_LESS 4.7)
		SET(ENABLE_CXX11 "-std=c++0x")
	ENDIF()
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ENABLE_CXX11}")
	ADD_DEFINITIONS(-D__GXX_EXPERIMENTAL_CXX0X__)
ENDIF()

ADD_LIBRARY(berkelium-cpp STATIC ${SRC_LIB} ${SRC_INCLUDE})

ADD_EXECUTABLE(demo1 ${SRC_DEMO1} ${SRC_INCLUDE})
TARGET_LINK_LIBRARIES(demo1 berkelium-cpp)
